txs auto checkin

--- a/thesis.tex
+++ b/thesis.tex
@@ -158,14 +158,14 @@
 % Show instructions on a separate page
 %\instructionschapters\cleardoublepage
 
-%\includechapter{01introduction}
+\includechapter{01introduction}
 \includechapter{02anisoIEintro}
-%\includechapter{03PFintro} 
-%\includechapter{04PFMoelans} 
-%\includechapter{05paper1} 
-%\includechapter{06PFnucleationBarrier} 
-%\includechapter{06paper2} 
-%\includechapter{90conclusion}
+\includechapter{03PFintro} 
+\includechapter{04PFMoelans} 
+\includechapter{05paper1} 
+\includechapter{06PFnucleationBarrier} 
+\includechapter{06paper2} 
+\includechapter{90conclusion}
 
 
 
