txs auto checkin

--- a/combine_graphs/paper2/sketches.tex
+++ b/combine_graphs/paper2/sketches.tex
@@ -381,12 +381,12 @@
 	\draw ($(x2)+(0.5*\AR*\yy,0)$) node[below] {$A_2, \Delta x_2$} ;
 	\draw ($(x3)+(0.5*\AR*\yyy,0)$) node[below] {$A_3, \Delta x_3$} ;
 %	
-%	\draw node[below right,inner sep=0] (img) at ($(x1) + (0,-1)$) {\includegraphics[width=0.4\textwidth]{figs\PFbarrier\NPA_calc_DGcrit.png}};
-%	
-%	\draw node[inner sep=0] at (-0.7,1) {(a)} ;
-%	\draw node[left,inner sep=0] at (img.north west) {(b)} ;
-%	\draw node[inner sep=0] at (img.west) {$\Delta G$} ;
-%	\draw node[inner sep=0] at (img.south) {$\Delta x$} ;
+	\draw node[below right,inner sep=0] (img) at ($(x1) + (0,-1)$) {\includegraphics[width=0.4\textwidth]{figs\PFbarrier\NPA_calc_DGcrit.png}};
+	
+	\draw node[inner sep=0] at (-0.7,1) {(a)} ;
+	\draw node[left,inner sep=0] at (img.north west) {(b)} ;
+	\draw node[inner sep=0] at (img.west) {$\Delta G$} ;
+	\draw node[inner sep=0] at (img.south) {$\Delta x$} ;
 \end{tikzpicture}
     
 %\begin{tikzpicture}[scale=2.7]
