txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -335,8 +335,8 @@
 		\draw (axis cs:-1.5,-0.5) node [circle,draw,minimum size=6]  {$\mathit{3}$};
 		\draw (axis cs:1.5,-0.5) node [circle,draw,minimum size=6] {$\mathit{4}$};
 		
-		\draw (B1) -- (B2);
-		\draw (zz) -- (B3);
+		\draw[thick] (B1) -- (B2);
+		\draw[thick] (zz) -- (B3);
 		\draw[dashed] (zz) -- (0,2);
 	\end{axis}
 \end{tikzpicture}
