txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -337,7 +337,7 @@
 		
 		\draw[thick] (B1) -- (B2);
 		\draw[thick] (zz) -- (B3);
-		\draw[dashed] (zz) -- (0,2);
+		\draw[dashed] (0,0) -- (0,2);
 	\end{axis}
 \end{tikzpicture}
 	
