txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -338,7 +338,7 @@
 		\draw[thick] (B1) -- (B2);
 		\draw[thick] (zz) -- (B3);
 		\draw[dashed] (0,0) -- (0,2);
-		\draw[fill,black] (zz) circle (3pt);
+		\draw[fill,black] (0,2) circle (3pt);
 	\end{axis}
 \end{tikzpicture}
 	
