txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -337,8 +337,8 @@
 		
 		\draw[thick] (B1) -- (B2);
 		\draw[thick] (zz) -- (B3);
-		\draw[dashed] (0,0) -- (0,2);
-		\draw[fill,black] (0,2) circle (3pt);
+		\draw[dashed] (zz) -- (axis cs:0,2);
+
 	\end{axis}
 \end{tikzpicture}
 	
