txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -237,6 +237,7 @@
 %		\draw node[inner sep=0] at (img.south) {$\Delta x$} ;
 %	\end{tikzpicture}
 	
+% NUCLEUS_ON_GB_ANNOTATED
 \begin{tikzpicture}[scale=2.7]
 	\def\thl{120}
 	\def\thr{-60}
