txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -254,7 +254,7 @@
 	\draw[very thick] (al) -| (cb) |- (ar);
 	\draw (cpl) arc (\thl+90:90:\RL) node (toppoint) {};
 	\draw[dashed] (toppoint) -- (c) ;
-	\draw (cpr) arc (90+\thr:90:\RR);
+	\draw (cpr) arc (90+\thr:90:\RL);
 	\draw[gray] (cpl) node[above right] {$\vartheta_L$} -- ++(\thl:0.5);
 	\draw[gray] (cpr) node[above left] {$\vartheta_R$}-- ++(180+\thr:0.5);
 	\draw[gray] ($(cpl)+(0.3,0)$) arc (0:\thl:0.3);
