--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -252,9 +252,9 @@
 	\draw[very thick, blue] ($(cpl)+(0,-0.04)$) -- node[midway,below] {$\sigma_{GB}^L$} ($(c)+(0,-0.04)$);
 	\draw[very thick, magenta] ($(cpr)+(0,-0.04)$) -- node[midway,below] {$\sigma_{GB}^R$} ($(c)+(0,-0.04)$);		
 	\draw[very thick] (al) -| (cb) |- (ar);
-	\draw (cpl) arc (\thl+90:90:\RL) node (toppoint) {};
+	\draw (cpl) arc (\thl+90:90:\RR) node (toppoint) {};
 	\draw[dashed] (toppoint) -- (c) ;
-	\draw (cpr) arc (90+\thr:90:\RL);
+	\draw (cpr) arc (90+\thr:90:\RR);
 	\draw[gray] (cpl) node[above right] {$\vartheta_L$} -- ++(\thl:0.5);
 	\draw[gray] (cpr) node[above left] {$\vartheta_R$}-- ++(180+\thr:0.5);
 	\draw[gray] ($(cpl)+(0.3,0)$) arc (0:\thl:0.3);
