--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -241,20 +241,22 @@
 \begin{tikzpicture}[scale=2.7]
 	\def\thl{120}
 	\def\thr{-60}
-	\tikzmath{ \RL = 0.4/sin(\thl) ; \RR = 0.7/sin(-\thr) ; }
+	\def\R{0.8}
+%	\tikzmath{ \RL = 0.4/sin(\thl) ; \RR = 0.7/sin(-\thr) ; }
+	\tikzmath{ \cplX = -sin(\thl/2) ; \cprX = sin(\thr/2) ; }
 	\path (-1,0) coordinate (al);
 	\path (1,0) coordinate (ar);
 	\path (0,0) coordinate (c);
 	\path (0,-0.4) coordinate (cb);
-	\path (-0.7,0) coordinate (cpl);
-	\path (0.7,0) coordinate (cpr);
+	\path (\cplX,0) coordinate (cpl);
+	\path (\cprX,0) coordinate (cpr);
 	
 	\draw[very thick, blue] ($(cpl)+(0,-0.04)$) -- node[midway,below] {$\sigma_{GB}^L$} ($(c)+(0,-0.04)$);
 	\draw[very thick, magenta] ($(cpr)+(0,-0.04)$) -- node[midway,below] {$\sigma_{GB}^R$} ($(c)+(0,-0.04)$);		
 	\draw[very thick] (al) -| (cb) |- (ar);
-	\draw (cpl) arc (\thl+90:90:\RR) node (toppoint) {};
+	\draw (cpl) arc (\thl+90:90:\R) node (toppoint) {};
 	\draw[dashed] (toppoint) -- (c) ;
-	\draw (cpr) arc (90+\thr:90:\RR);
+	\draw (cpr) arc (90+\thr:90:\R);
 	\draw[gray] (cpl) node[above right] {$\vartheta_L$} -- ++(\thl:0.5);
 	\draw[gray] (cpr) node[above left] {$\vartheta_R$}-- ++(180+\thr:0.5);
 	\draw[gray] ($(cpl)+(0.3,0)$) arc (0:\thl:0.3);
