txs auto checkin

--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -259,8 +259,8 @@
 	\draw (cpr) arc (90+\thr:90:\R);
 	\draw[gray] (cpl) node[above right] {$\vartheta_L$} -- ++(\thl:0.5);
 	\draw[gray] (cpr) node[above left] {$\vartheta_R$}-- ++(180+\thr:0.5);
-	\draw[gray] ($(cpl)+(0.3,0)$) arc (0:\thl:0.3);
-	\draw[gray] ($(cpr)+(-0.3,0)$) arc (180:180+\thr:0.3);
+	\draw[gray,-stealth] ($(cpl)+(0.3,0)$) arc (0:\thl:0.3);
+	\draw[gray,-stealth] ($(cpr)+(-0.3,0)$) arc (180:180+\thr:0.3);
 	\draw node[above] at (al) {$\sigma_{S}^L$};
 	\draw node[above] at (ar) {$\sigma_{S}^R$};
 	\draw (-1.2,-0.8) rectangle (1.2,1.4);
