--- a/combine_graphs/NPA_PF/sketches_NPA_PF.tex
+++ b/combine_graphs/NPA_PF/sketches_NPA_PF.tex
@@ -243,7 +243,7 @@
 	\def\thr{-80}
 	\def\R{0.8}
 %	\tikzmath{ \RL = 0.4/sin(\thl) ; \RR = 0.7/sin(-\thr) ; }
-	\tikzmath{ \cplX = -sin(\thl/2)*\R ; \cprX = -sin(\thr)*\R ; }
+	\tikzmath{ \cplX = -sin(\thl)*\R ; \cprX = -sin(\thr)*\R ; }
 	\path (-1,0) coordinate (al);
 	\path (1,0) coordinate (ar);
 	\path (0,0) coordinate (c);
